--- a/_src/index.html
+++ b/_src/index.html
@@ -2,5 +2,10 @@
 layout: default
 ---
 
-<h1>Test</h1>
-<img src="">
+<header>
+  <p><strong>Save the date</strong><br>for the wedding of</p>
+  <img src="{{ site.imagebase }}/jandb.png">
+  <h1>Jase + Bri</h1>
+  <div class="wedding-date">January 5, 2019</div>
+  <div class="wedding-location">Chicago, Illinois</idv>
+</header>
