--- a/_src/index.html
+++ b/_src/index.html
@@ -3,9 +3,7 @@ layout: default
 ---
 
 <header>
-  <p><strong>Save the date</strong><br>for the wedding of</p>
-  <img src="{{ site.imagebase }}/jandb.png">
-  <h1>Jase + Bri</h1>
+  <h1>Bri + Jase</h1>
   <div class="wedding-date">January 5, 2019</div>
   <div class="wedding-location">Chicago, Illinois</idv>
 </header>
