--- a/_src/index.html
+++ b/_src/index.html
@@ -2,6 +2,20 @@
 layout: default
 ---
 
-<header>
-  <h1>Bri + Jase</h1>
-</header>
+<section class="hero">
+  <div class="hero-back"></div>
+  <div class="content">
+    <h1>Bri + Jase</h1>
+    <h2>January 5, 2019 &bull; Chicago, Illinois</h2>
+  </div>
+</section>
+
+<nav>
+  <ul>
+    <li><a href="#ourstory">Our Story</a></li>
+    <li><a href="#details">Details</a></li>
+    <li><a href="#weddingparty">Wedding Party</a></li>
+    <li><a href="#accommdoations">Accommodations</a></li>
+    <li><a href="#registry">Registry</a></li>
+  </ul>
+</nav>
