--- a/_src/index.html
+++ b/_src/index.html
@@ -6,16 +6,54 @@ layout: default
   <div class="hero-back"></div>
   <div class="content">
     <h1>Bri + Jase</h1>
-    <h2>January 5, 2019 &bull; Chicago, Illinois</h2>
+    <h2>{{ site.wedding_date }}<span> &bull; </span>{{ site.wedding_location }}</h2>
   </div>
 </section>
 
 <nav>
   <ul>
-    <li><a href="#ourstory">Our Story</a></li>
+    <li><a href="#our-story">Our Story</a></li>
     <li><a href="#details">Details</a></li>
-    <li><a href="#weddingparty">Wedding Party</a></li>
-    <li><a href="#accommdoations">Accommodations</a></li>
+    <li><a href="#wedding-party">Wedding Party</a></li>
+    <li><a href="#accommodations">Accommodations</a></li>
     <li><a href="#registry">Registry</a></li>
   </ul>
 </nav>
+
+<main>
+
+<section data-section="our-story">
+  <div class="wrapper">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+
+<section data-section="details">
+  <div class="wrapper">
+    <h2>Details</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+
+<section data-section="wedding-party">
+  <div class="wrapper">
+    <h2>Wedding Party</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+
+<section data-section="accommodations">
+  <div class="wrapper">
+    <h2>Accommodations</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+
+<section data-section="registry">
+  <div class="wrapper">
+    <h2>Registry</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+
+</main>
