--- a/_src/index.html
+++ b/_src/index.html
@@ -41,6 +41,7 @@ layout: default
   </div>
   <div class="wedding-party-group">
     <div class="party-member" data-party-member="kait" data-member-featured="true">
+      <img data-src="{{ site.imagebase }}/people/cropped/kait.jpg">
       <div class="party-member-inner">
         <div class="member-name">Kait Eggers</div>
         <div class="member-title">Maid of Honor</div>
@@ -49,18 +50,37 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="party-member" data-party-member="amanda" data-member-featured="true"></div>
-    <div class="party-member" data-party-member="kelly"></div>
-    <div class="party-member" data-party-member="megan"></div>
-    <div class="party-member" data-party-member="grace"></div>
-    <div class="party-member" data-party-member="catie"></div>
-    <div class="party-member" data-party-member="sarah"></div>
-    <div class="party-member" data-party-member="marykate"></div>
-    <div class="party-member" data-party-member="maggie"></div>
-    <div class="party-member" data-party-member="courtney"></div>
+    <div class="party-member" data-party-member="amanda" data-member-featured="true">
+      <img data-src="{{ site.imagebase }}/people/cropped/amanda.jpg">
+    </div>
+    <div class="party-member" data-party-member="kelly">
+      <img data-src="{{ site.imagebase }}/people/cropped/kelly.jpg">
+    </div>
+    <div class="party-member" data-party-member="megan">
+      <img data-src="{{ site.imagebase }}/people/cropped/megan.jpg">
+    </div>
+    <div class="party-member" data-party-member="grace">
+      <img data-src="{{ site.imagebase }}/people/cropped/grace.jpg">
+    </div>
+    <div class="party-member" data-party-member="catie">
+      <img data-src="{{ site.imagebase }}/people/cropped/catie.jpg">
+    </div>
+    <div class="party-member" data-party-member="sarah">
+      <img data-src="{{ site.imagebase }}/people/cropped/sarah.jpg">
+    </div>
+    <div class="party-member" data-party-member="marykate">
+      <img data-src="{{ site.imagebase }}/people/cropped/marykate.jpg">
+    </div>
+    <div class="party-member" data-party-member="maggie">
+      <img data-src="{{ site.imagebase }}/people/cropped/maggie.jpg">
+    </div>
+    <div class="party-member" data-party-member="courtney">
+      <img data-src="{{ site.imagebase }}/people/cropped/courtney.jpg">
+    </div>
   <!-- </div>
   <div class="wedding-party-group"> -->
     <div class="party-member" data-party-member="matt" data-member-featured="true">
+      <img data-src="{{ site.imagebase }}/people/cropped/matt.jpg">
       <div class="party-member-inner">
         <div class="member-name">Matt Roan</div>
         <div class="member-title">Best Man</div>
@@ -69,13 +89,27 @@ layout: default
         </div>
       </div>
     </div>
-    <div class="party-member" data-party-member="andy" data-member-featured="true"></div>
-    <div class="party-member" data-party-member="alex"></div>
-    <div class="party-member" data-party-member="brendan"></div>
-    <div class="party-member" data-party-member="dubois"></div>
-    <div class="party-member" data-party-member="kyle"></div>
-    <div class="party-member" data-party-member="scott"></div>
-    <div class="party-member" data-party-member="rob"></div>
+    <div class="party-member" data-party-member="andy" data-member-featured="true">
+      <img data-src="{{ site.imagebase }}/people/cropped/andy.jpg">
+    </div>
+    <div class="party-member" data-party-member="alex">
+      <img data-src="{{ site.imagebase }}/people/cropped/alex.gif">
+    </div>
+    <div class="party-member" data-party-member="brendan">
+      <img data-src="{{ site.imagebase }}/people/cropped/brendan.jpg">
+    </div>
+    <div class="party-member" data-party-member="dubois">
+      <img data-src="{{ site.imagebase }}/people/cropped/dubois.jpg">
+    </div>
+    <div class="party-member" data-party-member="kyle">
+      <img data-src="{{ site.imagebase }}/people/cropped/kyle.jpg">
+    </div>
+    <div class="party-member" data-party-member="scott">
+      <img data-src="{{ site.imagebase }}/people/cropped/scott.jpg">
+    </div>
+    <div class="party-member" data-party-member="rob">
+      <img data-src="{{ site.imagebase }}/people/cropped/rob.jpg">
+    </div>
   </div>
 </section>
 
@@ -86,11 +120,23 @@ layout: default
   </div>
 </section>
 
+<section data-section="map">
+  <div id="map" class="map"></div>
+</section>
+
 <section data-section="registry">
   <div class="wrapper">
     <h2>Registry</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
+</section>
+
+<section data-section="photos">
+  <img data-src="{{ site.imagebase }}/photos/under.jpg">
+  <img data-src="{{ site.imagebase }}/photos/top.jpg">
+  <img data-src="{{ site.imagebase }}/photos/el.jpg">
+  <img data-src="{{ site.imagebase }}/photos/look.jpg">
+  <img data-src="{{ site.imagebase }}/photos/smile.jpg">
 </section>
 
 </main>
