Wedding party data

--- a/_src/index.html
+++ b/_src/index.html
@@ -39,78 +39,7 @@ layout: default
   <div class="wrapper">
     <h2>Wedding Party</h2>
   </div>
-  <div class="wedding-party-group">
-    <div class="party-member" data-party-member="kait" data-member-featured="true">
-      <img data-src="{{ site.imagebase }}/people/cropped/kait.jpg">
-      <div class="party-member-inner">
-        <div class="member-name">Kait Eggers</div>
-        <div class="member-title">Maid of Honor</div>
-        <div class="member-description">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </div>
-    <div class="party-member" data-party-member="amanda" data-member-featured="true">
-      <img data-src="{{ site.imagebase }}/people/cropped/amanda.jpg">
-    </div>
-    <div class="party-member" data-party-member="kelly">
-      <img data-src="{{ site.imagebase }}/people/cropped/kelly.jpg">
-    </div>
-    <div class="party-member" data-party-member="megan">
-      <img data-src="{{ site.imagebase }}/people/cropped/megan.jpg">
-    </div>
-    <div class="party-member" data-party-member="grace">
-      <img data-src="{{ site.imagebase }}/people/cropped/grace.jpg">
-    </div>
-    <div class="party-member" data-party-member="catie">
-      <img data-src="{{ site.imagebase }}/people/cropped/catie.jpg">
-    </div>
-    <div class="party-member" data-party-member="sarah">
-      <img data-src="{{ site.imagebase }}/people/cropped/sarah.jpg">
-    </div>
-    <div class="party-member" data-party-member="marykate">
-      <img data-src="{{ site.imagebase }}/people/cropped/marykate.jpg">
-    </div>
-    <div class="party-member" data-party-member="maggie">
-      <img data-src="{{ site.imagebase }}/people/cropped/maggie.jpg">
-    </div>
-    <div class="party-member" data-party-member="courtney">
-      <img data-src="{{ site.imagebase }}/people/cropped/courtney.jpg">
-    </div>
-  <!-- </div>
-  <div class="wedding-party-group"> -->
-    <div class="party-member" data-party-member="matt" data-member-featured="true">
-      <img data-src="{{ site.imagebase }}/people/cropped/matt.jpg">
-      <div class="party-member-inner">
-        <div class="member-name">Matt Roan</div>
-        <div class="member-title">Best Man</div>
-        <div class="member-description">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </div>
-    <div class="party-member" data-party-member="andy" data-member-featured="true">
-      <img data-src="{{ site.imagebase }}/people/cropped/andy.jpg">
-    </div>
-    <div class="party-member" data-party-member="alex">
-      <img data-src="{{ site.imagebase }}/people/cropped/alex.gif">
-    </div>
-    <div class="party-member" data-party-member="brendan">
-      <img data-src="{{ site.imagebase }}/people/cropped/brendan.jpg">
-    </div>
-    <div class="party-member" data-party-member="dubois">
-      <img data-src="{{ site.imagebase }}/people/cropped/dubois.jpg">
-    </div>
-    <div class="party-member" data-party-member="kyle">
-      <img data-src="{{ site.imagebase }}/people/cropped/kyle.jpg">
-    </div>
-    <div class="party-member" data-party-member="scott">
-      <img data-src="{{ site.imagebase }}/people/cropped/scott.jpg">
-    </div>
-    <div class="party-member" data-party-member="rob">
-      <img data-src="{{ site.imagebase }}/people/cropped/rob.jpg">
-    </div>
-  </div>
+  {% include wedding-party.html %}
 </section>
 
 <section data-section="accommodations">
