--- a/_src/index.html
+++ b/_src/index.html
@@ -31,14 +31,16 @@ layout: default
 <section data-section="details">
   <div class="wrapper">
     <h2>Details</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="details-block">
+      <div class="details-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <img data-src="{{ site.imagebase }}/oldstpats.jpg">
+    </div>
   </div>
 </section>
 
 <section data-section="wedding-party">
-  <div class="wrapper">
-    <h2>Wedding Party</h2>
-  </div>
   {% include wedding-party.html %}
 </section>
 
