--- a/_src/index.html
+++ b/_src/index.html
@@ -30,12 +30,41 @@ layout: default
 
 <section data-section="details">
   <div class="wrapper">
-    <h2>Details</h2>
     <div class="details-block">
       <div class="details-content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <h2>Ceremony</h2>
+        <address>
+          <p>
+            <strong>Old St. Patrick's Church</strong><br>
+            700 West Adams Street<br>
+            Chicago, IL 60661
+          </p>
+          <div></div>
+        </address>
+        <p><strong>XX:00pm</strong></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <img data-src="{{ site.imagebase }}/oldstpats.jpg">
+      <div class="details-images">
+        <img data-src="{{ site.imagebase }}/oldstpats.jpg">
+      </div>
+    </div>
+    <div class="details-block">
+      <div class="details-content">
+        <h2>Reception</h2>
+        <address>
+          <p>
+            <strong>Salvage One</strong><br>
+            1840 W Hubbard St<br>
+            Chicago, IL 60622
+          </p>
+          <div></div>
+        </address>
+        <p><strong>XX:00pm</strong></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="details-images">
+        <img data-src="{{ site.imagebase }}/#.jpg">
+      </div>
     </div>
   </div>
 </section>
