--- a/_src/index.html
+++ b/_src/index.html
@@ -41,11 +41,11 @@ layout: default
           </p>
           <div></div>
         </address>
-        <p><strong>XX:00pm</strong></p>
+        <p><strong>3:00pm</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="details-images">
-        <img data-src="{{ site.imagebase }}/oldstpats.jpg">
+        <img data-src="{{ site.imagebase }}/oldstpats.jpg" alt="Old St. Pat's">
       </div>
     </div>
     <div class="details-block">
@@ -59,11 +59,11 @@ layout: default
           </p>
           <div></div>
         </address>
-        <p><strong>XX:00pm</strong></p>
+        <p><strong>Cocktail Hour @ 5:30pm<br>Reception @ 6:30pm</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="details-images">
-        <img data-src="{{ site.imagebase }}/#.jpg">
+        <img data-src="{{ site.imagebase }}/salvageone.jpg" alt="Salvage One">
       </div>
     </div>
   </div>
