--- a/_src/index.html
+++ b/_src/index.html
@@ -41,7 +41,7 @@ layout: default
           </p>
           <div></div>
         </address>
-        <p><strong>3:00pm</strong></p>
+        <p><strong>@ 3:00 pm</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="details-images">
@@ -59,7 +59,7 @@ layout: default
           </p>
           <div></div>
         </address>
-        <p><strong>Cocktail Hour @ 5:30pm<br>Reception @ 6:30pm</strong></p>
+        <p><strong>Cocktail Hour @ 5:30 pm<br>Reception @ 6:30 pm</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="details-images">
