--- a/_src/index.html
+++ b/_src/index.html
@@ -30,8 +30,8 @@ layout: default
 
 <section data-section="details">
   <div class="wrapper">
-    <div class="details-block">
-      <div class="details-content">
+    <div class="block block-details">
+      <div class="block-content">
         <h2>Ceremony</h2>
         <address>
           <p>
@@ -44,17 +44,17 @@ layout: default
         <p><strong>@ 3:00 pm</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="details-images">
+      <div class="block-images">
         <img data-src="{{ site.imagebase }}/oldstpats.jpg" alt="Old St. Pat's">
       </div>
     </div>
-    <div class="details-block">
-      <div class="details-content">
+    <div class="block block-details">
+      <div class="block-content">
         <h2>Reception</h2>
         <address>
           <p>
             <strong>Salvage One</strong><br>
-            1840 W Hubbard St<br>
+            1840 West Hubbard St<br>
             Chicago, IL 60622
           </p>
           <div></div>
@@ -62,7 +62,7 @@ layout: default
         <p><strong>Cocktail Hour @ 5:30 pm<br>Reception @ 6:30 pm</strong></p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="details-images">
+      <div class="block-images">
         <img data-src="{{ site.imagebase }}/salvageone.jpg" alt="Salvage One">
       </div>
     </div>
@@ -75,8 +75,39 @@ layout: default
 
 <section data-section="accommodations">
   <div class="wrapper">
-    <h2>Accommodations</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="block block-accommodations">
+      <div class="block-content">
+        <h2>Ace Hotel</h2>
+        <address>
+          <p>
+            311 North Morgan Street<br>
+            Chicago, IL 60607
+          </p>
+          <div></div>
+        </address>
+        <p><strong>Overnight Parking: $57</strong></p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="block-images">
+        <img data-src="{{ site.imagebase }}/acehotel.jpg" alt="Ace Hotel">
+      </div>
+    </div>
+    <div class="block block-accommodations">
+      <div class="block-content">
+        <h2>TBD</h2>
+        <address>
+          <p>
+            123 Main St<br>
+            Chicago, IL 60622
+          </p>
+          <div></div>
+        </address>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="block-images">
+        <img data-src="{{ site.imagebase }}/salvageone.jpg" alt="Salvage One">
+      </div>
+    </div>
   </div>
 </section>
 
