--- a/_src/index.html
+++ b/_src/index.html
@@ -128,6 +128,9 @@ layout: default
 </section>
 
 <section data-section="photos">
+  <img data-src="{{ site.imagebase }}/photos/dance.jpg">
+  <img class="portrait" data-src="{{ site.imagebase }}/photos/flail.jpg">
+  <img class="portrait" data-src="{{ site.imagebase }}/photos/carry.jpg">
   <img data-src="{{ site.imagebase }}/photos/el.jpg">
 </section>
 
