--- a/_src/index.html
+++ b/_src/index.html
@@ -54,7 +54,7 @@ layout: default
         <address>
           <p>
             <strong>Salvage One</strong><br>
-            1840 West Hubbard St<br>
+            1840 West Hubbard Street<br>
             Chicago, IL 60622
           </p>
           <div></div>
@@ -86,7 +86,8 @@ layout: default
           <div></div>
         </address>
         <p><strong>Overnight Parking: $57</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Located in the Fulton Market neighborhood near the church and reception.</p>
+        <p>To book, <a href="https://www.acehotel.com/reservations/chicago?code_type=group_code&promo_code=ROAN">click this link</a> and use the code ROAN, email <a href="mailto:reservations.chi@acehotel.com?subject=ROAN Wedding" target="_blank">reservations.chi@acehotel.com</a>, or call <a href="tel:+13125481177" target="_blank">(312) 548-1177</a>.</p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/acehotel.jpg" alt="Ace Hotel">
@@ -94,18 +95,20 @@ layout: default
     </div>
     <div class="block block-accommodations">
       <div class="block-content">
-        <h2>TBD</h2>
+        <h2>Holiday Inn</h2>
         <address>
           <p>
-            123 Main St<br>
-            Chicago, IL 60622
+            350 West Mart Center Drive<br>
+            Chicago, IL 60654
           </p>
           <div></div>
         </address>
+        <p><strong>Overnight Parking: $41</strong></p>
+        <p>Located in the River North neighborhood downtown.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="block-images">
-        <img data-src="{{ site.imagebase }}/salvageone.jpg" alt="Salvage One">
+        <img data-src="{{ site.imagebase }}/holidayinn.jpg" alt="Holiday Inn">
       </div>
     </div>
   </div>
