--- a/_src/index.html
+++ b/_src/index.html
@@ -42,7 +42,7 @@ layout: default
           <div></div>
         </address>
         <p><strong>{{ site.wedding_date }} @ 3:00 pm</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Parking is available at the south-east corner of Adams Street and Desplaines Street and the north-west corner of Monroe Street and Desplaines Street.</p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/oldstpats.jpg" alt="Old St. Pat's">
@@ -60,7 +60,7 @@ layout: default
           <div></div>
         </address>
         <p><strong>Cocktail Hour @ 5:30 pm<br>Reception @ 6:30 pm</strong></p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Parking is available across the street at 1827 West Hubbard Street ("Tablescapes") starting at 5:00 pm sharp.</p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/salvageone.jpg" alt="Salvage One">
