--- a/_src/index.html
+++ b/_src/index.html
@@ -42,7 +42,7 @@ layout: default
           <div></div>
         </address>
         <p><strong>{{ site.wedding_date }} @ 3:00 pm</strong></p>
-        <p>Parking is available at the south-east corner of Adams Street and Desplaines Street and the north-west corner of Monroe Street and Desplaines Street.</p>
+        <p>Parking is available at the northwest corner of Monroe Street and Desplaines Street. <a href="http://www.oldstpats.org/liturgy/parking/" target="_blank">See more parking information here.</a></p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/oldstpats.jpg" alt="Old St. Pat's">
@@ -60,7 +60,7 @@ layout: default
           <div></div>
         </address>
         <p><strong>Cocktail Hour @ 5:30 pm<br>Reception @ 6:30 pm</strong></p>
-        <p>Parking is available across the street at 1827 West Hubbard Street ("Tablescapes") starting at 5:00 pm sharp.</p>
+        <p>Parking is available across the street at 1827 West Hubbard Street (&ldquo;Tablescapes&rdquo;) starting at 5:00 pm.</p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/salvageone.jpg" alt="Salvage One">
