--- a/_src/index.html
+++ b/_src/index.html
@@ -78,7 +78,7 @@ layout: default
           </p>
           <div></div>
         </address>
-        <p><strong>Overnight Parking: $57</strong></p>
+        <p><em>Overnight Parking: $57</em></p>
         <p>Located in the Fulton Market neighborhood near the church and reception.</p>
         <p>To book, <a href="https://www.acehotel.com/reservations/chicago?code_type=group_code&promo_code=ROAN">click this link</a> and use the code ROAN, email <a href="mailto:reservations.chi@acehotel.com?subject=ROAN Wedding" target="_blank">reservations.chi@acehotel.com</a>, or call <a href="tel:+13125481177" target="_blank">(312) 548-1177</a>.</p>
       </div>
@@ -96,9 +96,9 @@ layout: default
           </p>
           <div></div>
         </address>
-        <p><strong>Overnight Parking: $41</strong></p>
+        <p><em>Overnight Parking: $41</em></p>
         <p>Located in the River North neighborhood downtown.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>To book, <a href="https://bit.ly/Comiskey_Roan">click this link</a> or call <a href="tel:+18552680372" target="_blank">(855) 268-0372</a> and use the group code CRB.</p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/holidayinn.jpg" alt="Holiday Inn">
