--- a/_src/index.html
+++ b/_src/index.html
@@ -119,7 +119,7 @@ layout: default
     <a href="https://www.amazon.com/wedding/bri-comiskey-jase-roan-chicago-january-2019/registry/L5HR90HPRK0S" target="_blank"><img src="{{ site.imagebase }}/amazon.svg" alt="Amazon"></a>
     <a href="https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=545993821&eventType=Wedding&pwsurl=" target="_blank"><img src="{{ site.imagebase }}/bed-bath-beyond.svg" alt="Bed Bath &amp; Beyond"></a>
     <a href="https://www.crateandbarrel.com/gift-registry/bri-comiskey-and-jase-roan/r5850353" target="_blank"><img src="{{ site.imagebase }}/crate-barrel.svg" alt="Crate &amp; Barrel"></a>
-    <!--<a href="https://www.zola.com/registry/roanwedding" target="_blank"><img src="{{ site.imagebase }}/zola.svg" alt="Zola"></a>-->
+    <a href="https://www.zola.com/registry/roanwedding" target="_blank"><img src="{{ site.imagebase }}/zola.svg" alt="Zola"></a>
   </div>
 </section>
 
