Added camera language

--- a/_src/index.html
+++ b/_src/index.html
@@ -35,6 +35,7 @@ layout: default
           <div></div>
         </address>
         <p><strong>{{ site.wedding_date }} @ 3:00 pm</strong></p>
+        <p>Please note, we kindly ask that you keep cameras and cell phones off and put away for our <em>unplugged ceremony</em>. We prefer to see your smiling faces, not your devices!</p>
         <p>Parking is available at the northwest corner of Monroe Street and Desplaines Street. <a href="http://www.oldstpats.org/liturgy/parking/" target="_blank">See more parking information here.</a></p>
       </div>
       <div class="block-images">
