--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ layout: default
         </address>
         <p><em>Overnight Parking: $57</em></p>
         <p>Located in the Fulton Market neighborhood near the church and reception.</p>
-        <p>To book, <a href="https://www.acehotel.com/reservations/chicago?code_type=group_code&promo_code=ROAN">click this link</a> and use the code ROAN, email <a href="mailto:reservations.chi@acehotel.com?subject=ROAN Wedding" target="_blank">reservations.chi@acehotel.com</a>, or call <a href="tel:+13125481177" target="_blank">(312) 548-1177</a>.</p>
+        <p>To book, <a href="https://www.acehotel.com/reservations/chicago?code_type=group_code&promo_code=ROAN">click this link</a> and use the code ROAN, email <a href="mailto:reservations.chi@acehotel.com?subject=ROAN+Wedding" target="_blank">reservations.chi@acehotel.com</a>, or call <a href="tel:+13125481177" target="_blank">(312) 548-1177</a>.</p>
       </div>
       <div class="block-images">
         <img data-src="{{ site.imagebase }}/acehotel.jpg" alt="Ace Hotel">
