--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@ layout: default
 </section>
 
 <section data-section="photos">
-  <img data-src="{{ site.imagebase }}/photos/dance.jpg">
-  <img class="portrait" data-src="{{ site.imagebase }}/photos/flail.jpg">
-  <img class="portrait" data-src="{{ site.imagebase }}/photos/carry.jpg">
-  <img data-src="{{ site.imagebase }}/photos/el.jpg">
+  <img data-src="{{ site.imagebase }}/photos/dance.jpg" alt="">
+  <img class="portrait" data-src="{{ site.imagebase }}/photos/flail.jpg" alt="">
+  <img class="portrait" data-src="{{ site.imagebase }}/photos/carry.jpg" alt="">
+  <img data-src="{{ site.imagebase }}/photos/el.jpg" alt="">
 </section>
 
 </main>
